--- a/styles/text.css
+++ b/styles/text.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Secular+One');
+@import url('https://fonts.googleapis.com/css?family=Asap');
 
 section.sectext{
 	height: 100%;
@@ -9,7 +9,7 @@ section.sectext{
 	line-height: 100px;
 	font-size: 48px;
 	color: #242424;
-	font-family: 'Secular One';
+	font-family: 'Asap';
 	transform: uppercase;
 	position: relative;
 }
