--- a/styles/cards.css
+++ b/styles/cards.css
@@ -93,23 +93,23 @@ ul.cards li div div.cards-content div{
 
 
 #purplecolor1 {
-    background-color: #4F007F;
+    background-color: #AC06FF;
 }
 #purplecolor2 {
     background-color: #BB4CFF;
 }
 #purplecolor3 {
-    background-color: #5D267F;
+    background-color: #9A06E5;
 }
 #purplecolor4 {
     background-color: #7E00CC;
 }
 
 #greencolor1 {
-    background-color: #0F7F3A;
+    background-color: #15FF61;
 }
 #greencolor2 {
-    background-color: #1DFF74;
+    background-color: #12E558;
 }
 #greencolor3 {
     background-color: #1DFF74;
